[gd_scene load_steps=36 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/Body.gd" type="Script" id=2]
[ext_resource path="res://images/playerShip1_blue.png" type="Texture" id=3]
[ext_resource path="res://images/fire04.png" type="Texture" id=4]
[ext_resource path="res://images/fire05.png" type="Texture" id=5]
[ext_resource path="res://images/fire06.png" type="Texture" id=6]
[ext_resource path="res://images/fire07.png" type="Texture" id=7]
[ext_resource path="res://scenes/Weapon.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/effects/star2.png" type="Texture" id=9]
[ext_resource path="res://scripts/PlayerHUD.gd" type="Script" id=10]
[ext_resource path="res://scripts/PlayerLife.gd" type="Script" id=11]
[ext_resource path="res://font/Kenney Rocket.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scripts/ScoreLabel.gd" type="Script" id=13]
[ext_resource path="res://images/ui/green_button00.png" type="Texture" id=14]
[ext_resource path="res://images/ui/green_button03.png" type="Texture" id=15]
[ext_resource path="res://images/ui/green_button02.png" type="Texture" id=16]
[ext_resource path="res://images/ui/green_button01.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "deccelerate",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "accelerate",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995434, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="Gradient" id=7]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0.933594, 0.0875244, 0.0875244, 1, 0.808594, 0.636452, 0.120026, 0 )

[sub_resource type="GradientTexture" id=8]

flags = 4
gradient = SubResource( 7 )
width = 2048

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
trail_color_modifier = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 10.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 5.0
scale_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Hue Variation", "Trail" ]

[sub_resource type="Gradient" id=10]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]

flags = 4
gradient = SubResource( 10 )
width = 2048

[sub_resource type="Curve" id=12]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.467657 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]

flags = 4
width = 2048
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 10.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.5
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 0.0
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Initial Velocity", "Scale" ]

[sub_resource type="DynamicFont" id=15]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxEmpty" id=16]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="DynamicFont" id=17]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=19]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Player" type="Node"]

script = ExtResource( 1 )
max_timecontrol = 100.0

[node name="Node2D" type="Node2D" parent="." index="0"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PlayerBody" type="RigidBody2D" parent="Node2D" index="0"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = 5.0
script = ExtResource( 2 )
_sections_unfolded = [ "Applied Forces", "Linear", "Transform" ]
rotation_speed = 200
move_speed = 8000
invincible_time = 2.0
max_health = 100.0
max_time_control = 100.0
max_boost = 500.0

[node name="Camera2D" type="Camera2D" parent="Node2D/PlayerBody" index="0"]

visible = false
position = Vector2( -1.73409, 1.81254 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -1000
limit_top = -500
limit_right = 1000
limit_bottom = 500
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
_sections_unfolded = [ "Limit", "Smoothing" ]

[node name="Sprite" type="Sprite" parent="Node2D/PlayerBody" index="1"]

position = Vector2( -0.387421, 1.16227 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="LeftPropeller" type="AnimatedSprite" parent="Node2D/PlayerBody/Sprite" index="0"]

position = Vector2( -36.7139, 53.0372 )
frames = SubResource( 1 )
animation = "default"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="RightPropeller" type="AnimatedSprite" parent="Node2D/PlayerBody/Sprite" index="1"]

position = Vector2( 50.612, 55.5694 )
frames = SubResource( 1 )
animation = "default"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="LeftWeapon" parent="Node2D/PlayerBody/Sprite" index="2" instance=ExtResource( 8 )]

position = Vector2( -46.335, -11.8593 )
scale = Vector2( 0.24058, 0.24058 )
_sections_unfolded = [ "Transform" ]

[node name="RightWeapon" parent="Node2D/PlayerBody/Sprite" index="3" instance=ExtResource( 8 )]

position = Vector2( 47.7609, -11.8168 )
scale = Vector2( 0.24058, 0.24058 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlayerBody" index="2"]

visible = false
shape = SubResource( 2 )
disabled = true

[node name="Area2D" type="Area2D" parent="Node2D/PlayerBody" index="3"]

input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Node2D/PlayerBody/Area2D" index="0"]

visible = false
position = Vector2( -2.3494, 2.23562 )
build_mode = 0
polygon = PoolVector2Array( 9.68422, 6.59301, 3.42116, 16.7995, 13.0477, 24.6863, -11.3086, 23.4105, -10.2648, 19.931, -12.9324, 7.05694, -17.9196, 4.27336, -18.1516, -5.23721, -12.2365, -8.71668, -10.9607, -24.8382, 10.6121, -27.3899, 11.424, -22.0547, 2.84125, -19.851, 9.33627, -7.55685, 21.2825, -5.35319, 21.3984, 3.46148 )
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="Node2D/PlayerBody" index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="LeftEmitter" type="Particles2D" parent="Node2D/PlayerBody" index="5"]

position = Vector2( -18.67, -20.8245 )
scale = Vector2( 0.2, 0.2 )
emitting = true
amount = 50
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 9 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Transform" ]

[node name="RightEmitter" type="Particles2D" parent="Node2D/PlayerBody" index="6"]

position = Vector2( -17.8478, 25.676 )
scale = Vector2( 0.2, 0.2 )
emitting = true
amount = 50
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 9 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Transform" ]

[node name="DeadExplosion" type="Particles2D" parent="Node2D" index="1"]

visible = false
position = Vector2( 253.43, 91.8615 )
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 14 )
texture = ExtResource( 9 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time" ]

[node name="PlayerHUD" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 10 )

[node name="Health" type="Node2D" parent="PlayerHUD" index="0"]

position = Vector2( 5, 9 )
script = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
tweening = true
width = 400.0
height = 10.0
inside_color = Color( 0.0416107, 0.394531, 0.0719398, 1 )
outline_color = Color( 1, 1, 1, 1 )
secondary_color = Color( 0.0530548, 0.714844, 0.111881, 1 )

[node name="Boost" type="Node2D" parent="PlayerHUD" index="1"]

position = Vector2( 300, 9 )
script = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
tweening = false
width = 400.0
height = 10.0
inside_color = Color( 0.110901, 0.379866, 0.617188, 1 )
outline_color = Color( 1, 1, 1, 1 )
secondary_color = null

[node name="TimeControl" type="Node2D" parent="PlayerHUD" index="2"]

position = Vector2( 6, 290.66 )
script = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
tweening = false
width = 1000.0
height = 10.0
inside_color = Color( 0.746094, 0.746094, 0.746094, 1 )
outline_color = Color( 0, 0, 0, 1 )
secondary_color = Color( 1, 1, 1, 1 )

[node name="ScoreLabel" type="Label" parent="PlayerHUD" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 1022.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 15 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 13 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="EndScreen" type="Node2D" parent="PlayerHUD" index="4"]

visible = false

[node name="Label" type="Label" parent="PlayerHUD/EndScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 275.0
margin_right = 628.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
text = "You lost"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="RestartButton" type="TextureButton" parent="PlayerHUD/EndScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 409.0
margin_top = 341.0
margin_right = 599.0
margin_bottom = 390.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 17 )
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Grow Direction", "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="PlayerHUD/EndScreen/RestartButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 19 )
text = "Restart"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="MenuButton" type="TextureButton" parent="PlayerHUD/EndScreen" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 411.0
margin_top = 431.0
margin_right = 601.0
margin_bottom = 480.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 17 )
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Grow Direction", "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="PlayerHUD/EndScreen/MenuButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 19 )
text = "Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="TimeCooldown" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false


